scrollbar width is fixed

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -51,8 +51,8 @@ body {
 // Scrollbar CSS
 ::-webkit-scrollbar {
     background: $color-light-white;
-    width: 10px;
-    height: 10px;
+    width: 7px;
+    height: 7px;
 }
 
 ::-webkit-scrollbar-thumb {
